# NPNT_OpenSSL

./: .gitignore  CMakeLists.txt  README.md  binsign.sha256  bk.txt  c14n11.cpp  c14n_test.xml  check_signature.sh  cmdsign.cpp  createsign.cpp  private.pem  publickey.pem  signature.txt  test.xml  xml_proc.cpp
cpp/: README.md  cmdsign.cpp  createsign.cpp  createsign.h  key.cpp  key.h  main.cpp  testC14N.cpp  testC14N.h  xml_proc.cpp  xml_proc.h
keys/: README.md
pugi/: README.md
pys/: README.md  sign.py
resources/: README.md
resources/keys/: README.md
resources/xmls/: README.md  binsign.sha256  pugi_PI.xml  pugi_SI.xml  signature.txt
small_npnt/: bk.xml  createsign.cpp  rsasign.py  sign.py  signedinfo.xml
xmls/: README.md  cPI.xml  cSI.xml  fin_signed (copy).xml  fin_signed.xml  permission.xml
